# vpn_client_app

./: .gitignore  README.md  pubspec.yaml  repo_tree.txt
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/fe5f470cc6528a4ea58b675e32403e54/: .filecache  android_aot_bundle_release_android-arm.stamp  android_aot_bundle_release_android-arm64.stamp  android_aot_bundle_release_android-x64.stamp  android_aot_release_android-arm.stamp  android_aot_release_android-arm64.stamp  android_aot_release_android-x64.stamp  aot_android_asset_bundle.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
android/: build.gradle  settings.gradle
android/app/: build.gradle  build.gradle.kts  build.gradle.kts.old
configs/macos/: config.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  singbox_ffi.dart  singbox_ffi.dart.old  singbox_helper.dart
lib/platform/: vpn_platform.dart
lib/utils/: colors.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
windows/singbox_plugin/: CMakeLists.txt  singbox_plugin.cpp  singbox_plugin.h
(+7 files in other folders)
